[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/battle/battle_hud.gd" id="1"]

[node name="BattleHUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="Root" type="Control" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BattleField" type="Control" parent="Root"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PlayerSprite" type="AnimatedSprite2D" parent="Root/BattleField"]
position = Vector2(140, 170)
scale = Vector2(4, 4)

[node name="EnemySprite" type="AnimatedSprite2D" parent="Root/BattleField"]
position = Vector2(500, 70)
scale = Vector2(4, 4)

[node name="EnemyInfo" type="PanelContainer" parent="Root"]
layout_mode = 0
offset_left = 380.0
offset_top = 15.0
offset_right = 625.0
offset_bottom = 110.0

[node name="VBox" type="VBoxContainer" parent="Root/EnemyInfo"]

[node name="TopRow" type="HBoxContainer" parent="Root/EnemyInfo/VBox"]

[node name="NameLabel" type="Label" parent="Root/EnemyInfo/VBox/TopRow"]
custom_minimum_size = Vector2(150, 0)
text = "EnemyCreature"

[node name="LevelLabel" type="Label" parent="Root/EnemyInfo/VBox/TopRow"]
custom_minimum_size = Vector2(60, 0)
text = "Lv.3"
horizontal_alignment = 2

[node name="HPBar" type="ProgressBar" parent="Root/EnemyInfo/VBox"]
custom_minimum_size = Vector2(0, 18)
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HPLabel" type="Label" parent="Root/EnemyInfo/VBox"]
text = "100 / 100"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="Root/EnemyInfo/VBox"]
visible = false
text = ""
horizontal_alignment = 1

[node name="PlayerInfo" type="PanelContainer" parent="Root"]
layout_mode = 0
offset_left = 15.0
offset_top = 195.0
offset_right = 260.0
offset_bottom = 290.0

[node name="VBox" type="VBoxContainer" parent="Root/PlayerInfo"]

[node name="TopRow" type="HBoxContainer" parent="Root/PlayerInfo/VBox"]

[node name="NameLabel" type="Label" parent="Root/PlayerInfo/VBox/TopRow"]
custom_minimum_size = Vector2(150, 0)
text = "PlayerCreature"

[node name="LevelLabel" type="Label" parent="Root/PlayerInfo/VBox/TopRow"]
custom_minimum_size = Vector2(60, 0)
text = "Lv.5"
horizontal_alignment = 2

[node name="HPBar" type="ProgressBar" parent="Root/PlayerInfo/VBox"]
custom_minimum_size = Vector2(0, 18)
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HPLabel" type="Label" parent="Root/PlayerInfo/VBox"]
text = "100 / 100"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="Root/PlayerInfo/VBox"]
visible = false
text = ""
horizontal_alignment = 1

[node name="FloatingText" type="Label" parent="Root"]
visible = false
layout_mode = 0
offset_left = 200.0
offset_top = 100.0
offset_right = 440.0
offset_bottom = 130.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomPanel" type="PanelContainer" parent="Root"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -105.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Root/BottomPanel"]
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 8

[node name="HBox" type="HBoxContainer" parent="Root/BottomPanel/MarginContainer"]

[node name="MessageLabel" type="Label" parent="Root/BottomPanel/MarginContainer/HBox"]
custom_minimum_size = Vector2(370, 0)
size_flags_horizontal = 3
text = "A wild creature appeared!"
vertical_alignment = 1
autowrap_mode = 2

[node name="ActionButtons" type="VBoxContainer" parent="Root/BottomPanel/MarginContainer/HBox"]
custom_minimum_size = Vector2(140, 0)

[node name="FightBtn" type="Button" parent="Root/BottomPanel/MarginContainer/HBox/ActionButtons"]
custom_minimum_size = Vector2(0, 22)
text = "Fight"

[node name="ItemsBtn" type="Button" parent="Root/BottomPanel/MarginContainer/HBox/ActionButtons"]
custom_minimum_size = Vector2(0, 22)
text = "Items"

[node name="CatchBtn" type="Button" parent="Root/BottomPanel/MarginContainer/HBox/ActionButtons"]
custom_minimum_size = Vector2(0, 22)
text = "Catch (5)"

[node name="RunBtn" type="Button" parent="Root/BottomPanel/MarginContainer/HBox/ActionButtons"]
custom_minimum_size = Vector2(0, 22)
text = "Run"

[node name="SkillButtons" type="VBoxContainer" parent="Root/BottomPanel/MarginContainer/HBox"]
visible = false
custom_minimum_size = Vector2(140, 0)
